tests/agl/rejections/type/duplicate_call_option.agl
let x: json = prompt[strict_json: true, strict_json: true] "Question."
